--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -345,8 +345,8 @@
                                 <rect key="frame" x="8" y="58" width="359" height="663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="888" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq3-I1-HX0">
-                                        <rect key="frame" x="4.3333333333333428" y="0.0" width="350.66666666666663" height="216"/>
-                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="220"/>
+                                        <rect key="frame" x="4.3333333333333428" y="0.0" width="350.66666666666663" height="215"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="220"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="heightClass=regular-widthClass=compact">
@@ -354,20 +354,20 @@
                                         </variation>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qwc-fI-Bfo">
-                                        <rect key="frame" x="42" y="216.00000000000003" width="275.33333333333331" height="109.33333333333334"/>
+                                        <rect key="frame" x="42.333333333333343" y="214.99999999999997" width="274.33333333333326" height="107.66666666666666"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLM-Es-BOa" userLabel="Direction">
-                                                <rect key="frame" x="0.0" y="0.33333333333331439" width="78.333333333333329" height="108.66666666666667"/>
-                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="110"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="77.333333333333329" height="107.66666666666667"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="90"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                                 <variation key="heightClass=regular-widthClass=compact">
-                                                    <fontDescription key="fontDescription" type="system" pointSize="91"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="90"/>
                                                 </variation>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delta" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCF-22-z3g" userLabel="Delta">
-                                                <rect key="frame" x="78.333333333333343" y="1" width="197.00000000000003" height="107.66666666666667"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                                <rect key="frame" x="77.333333333333343" y="0.0" width="197.00000000000003" height="107.66666666666667"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="90"/>
                                                 <nil key="textColor"/>
                                                 <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <variation key="heightClass=regular-widthClass=compact">
@@ -377,7 +377,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MinAgo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNC-P8-PbV">
-                                        <rect key="frame" x="32.333333333333343" y="325.33333333333331" width="294.33333333333326" height="108.33333333333331"/>
+                                        <rect key="frame" x="32.333333333333343" y="322.66666666666669" width="294.33333333333326" height="108"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -386,7 +386,7 @@
                                         </variation>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzZ-jc-k2v">
-                                        <rect key="frame" x="0.0" y="433.66666666666669" width="359" height="229.33333333333331"/>
+                                        <rect key="frame" x="0.0" y="430.66666666666669" width="359" height="232.33333333333331"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HFL-Ye-6HR" userLabel="Clock Area Stack View">
                                                 <rect key="frame" x="62.666666666666686" y="8.0000000000000071" width="234" height="127.66666666666669"/>
